--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 html{
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 @font-face {
     font-family: Text;
@@ -23,7 +24,6 @@ header{
     padding-bottom: 10px; /* Some padding */
     background: linear-gradient(45deg, white 10%, rgb(119, 206, 228) 30%, rgb(111, 202, 251) 50%, rgb(243, 210, 210) 70%,rgb(246, 101, 101) 90%, rgb(248, 82, 82) 100%);
     justify-content: space-between;
-    border-radius: 0% 0% 0% 20%;
 }
 
 .nav{
@@ -48,6 +48,30 @@ header{
     height: 100%;
 }
 
+main{
+    margin-top: calc(13vh + 20px);
+    display: flex;
+}
+
 .intro{
-    background-image: 
+    width: 100%;
+    height: 70vh;
+    display: block;
+    position: fixed;
+}
+
+#intro_back{
+    height: 100%;
+    width:100%;
+    background-image: url(photos/intro.background.jpg);
+    background-size: contain;
+    opacity: 0.4;
+    position: relative;
+}
+
+.intro img{
+    top: 0px;
+    position: absolute;
+    height: 100%;
+    text-align: center;
 }
