--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,33 @@
 /* Font used on website */
 
-html{
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
 @font-face {
     font-family: Text;
     src: url(text.ttf);
+}
+
+@font-face {
+    font-family: Title;
+    src: url(title.otf);
 }
 body{
     margin: 0;
 }
 
+a{
+    text-decoration: none;
+    color:black;
+}
 header{
-    font-family: Text;
+    font-family: Title;
     display: inline-flex;   
     margin: 0; 
     height: 13vh;
     top: 0;
     width: 100%;
     position: fixed;
-    padding-top: 10px;
-    padding-bottom: 10px; /* Some padding */
     background: linear-gradient(45deg, white 10%, rgb(119, 206, 228) 30%, rgb(111, 202, 251) 50%, rgb(243, 210, 210) 70%,rgb(246, 101, 101) 90%, rgb(248, 82, 82) 100%);
     justify-content: space-between;
+    transition: 0.4s;
 }
 
 .nav{
@@ -36,8 +40,9 @@ header{
     text-decoration: none;
     color: black;
     font-weight: bold; 
-    font-size: 2rem;
+    font-size: 1.54rem;
     padding-right: 1rem;
+    text-transform: uppercase;
 }
 
 .nav a:active{
@@ -49,15 +54,18 @@ header{
 }
 
 main{
-    margin-top: calc(13vh + 20px);
+    margin-top: calc(13vh);
     display: flex;
+    flex-direction: column;
 }
 
 .intro{
     width: 100%;
-    height: 70vh;
-    display: block;
-    position: fixed;
+    height: 400px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    
 }
 
 #intro_back{
@@ -71,7 +79,82 @@ main{
 
 .intro img{
     top: 0px;
-    position: absolute;
     height: 100%;
-    text-align: center;
+    position: absolute;
+}   
+
+.intro_content{
+    position: absolute;
+    align-items: center;
+    height: 100%;
+    width: 100%; /* or less */
+    display: inline-flex;
+    justify-content: space-around;
+}
+
+.intro_content_left{
+    text-align: left;
+    margin-right: 10vw;
+}
+
+.intro_content_right{
+    text-align: right;
+    margin-left: 10vw;
+}
+
+
+.intro_content #title{
+    left: 50%;
+    font-size: 50px;
+    font-weight: 1000;
+    font-family: Title;
+    margin: 10px;
+}
+
+.intro_content_left .list_achieve{
+    font-size: 30px;
+    margin: 0;
+    display: inline-block; text-align: left;
+}
+
+.intro_content_right .list_achieve{
+    font-size: 30px;
+    margin: 0;
+    display: inline-block; 
+    text-align: right;
+    direction: rtl;
+}
+.intro_content_right ul{
+    text-align: right;
+}
+.list_achieve{
+    font-family: Text;
+}
+
+.custom-shape-divider-bottom-1728925114 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1728925114 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 100px;
+}
+
+.custom-shape-divider-bottom-1728925114 .shape-fill {
+    fill:black;
+}
+
+.coding{
+    height: 400px;
+    width: 100%;
+    position: relative;
+    background-color: black;
 }
