--- a/styles.css
+++ b/styles.css
@@ -152,9 +152,35 @@ main{
     fill:black;
 }
 
+.custom-shape-divider-bottom-1728925430 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1728925430 svg {
+    position: relative;
+    display: block;
+    width: calc(136% + 1.3px);
+    height: 100px;
+}
+
+.custom-shape-divider-bottom-1728925430 .shape-fill {
+    fill: #FFFFFF;
+}
+
 .coding{
-    height: 400px;
+    height: 500px;
     width: 100%;
     position: relative;
     background-color: black;
+}
+
+section{
+    height: 300px;
+
 }
