--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 /* Font used on website */
 
+html{
+    overflow-x: none;
+}
 @font-face {
     font-family: Text;
     src: url(text.ttf);
@@ -13,6 +16,15 @@ body{
     margin: 0;
 }
 
+
+.title{
+    font-family: Title;
+    font-size: 60px;
+    margin-top: 5vh;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
 a{
     text-decoration: none;
     color:black;
@@ -152,27 +164,6 @@ main{
     fill:black;
 }
 
-.custom-shape-divider-bottom-1728925430 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    transform: rotate(180deg);
-}
-
-.custom-shape-divider-bottom-1728925430 svg {
-    position: relative;
-    display: block;
-    width: calc(136% + 1.3px);
-    height: 100px;
-}
-
-.custom-shape-divider-bottom-1728925430 .shape-fill {
-    fill: #FFFFFF;
-}
-
 .coding{
     height: 500px;
     width: 100%;
@@ -180,7 +171,197 @@ main{
     background-color: black;
 }
 
-section{
-    height: 300px;
+
+.coding_content{
+    text-align: center;
+    color: white;
+    margin: 3vw;
+    height: 100%;
+}
+
+.coding_top{
+    margin-top: -40px;
+}
+
+.coding_left{
+    float: left;
+    width: 50%;
+    margin-top: 3vh;
+    position: relative;
+    height: 70%;
+    display: block;
+}
+
+.coding_left button{
+    position: relative;
+    border-radius: 15px;
+    margin-right: 2%;
+    margin-bottom: 5%;
+    border-style: none;
+}
+
+.coding_left a{
+    width: 100%;
+    height: 100%;
+    transition: 4s;
+}
+
+.coding_left img{
+    min-width: 100%;
+}
+.coding_right{
+    float: right;
+    text-align: left;
+}
+.coding .title{
+    margin-top: 80px;
+}
+#ScienceTimes{
+    max-width: 350px;
+    max-height: 110px;
+    min-height: 50px;
+    min-width: 17px;
+    border-radius: 0;
+    padding: 0;
+}
+
+#ScienceTimes img{
+    width: 100%;
+}
+
+#CollegeSearch{
+    max-width: 250px;
+    min-width: 19px;
+    height: auto;
+    background-color: transparent;
+}
+
+#CollegeSearch img{
+    width: 100%;
+}
+
+.coding_right li{
+    font-family: Text;
+    color: white;
+    font-size: 2rem;
+}
+
+.coding_right ul{
+    list-style-type: circle;
 
 }
+
+.level{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.coding_right a{
+    color: white;
+    text-decoration: none;
+}
+
+.coding_right a:hover{
+    color: yellowgreen;
+}
+
+.coding_right a:active{
+    color: none;
+}
+/* divider between coding and choir */
+.custom-shape-divider-top-1728968974 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1728968974 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 100px;
+}
+
+.custom-shape-divider-top-1728968974 .shape-fill {
+    fill: black;
+}
+
+.choir{
+    background-image: linear-gradient(to bottom right, rgb(128, 75, 241),rgb(102, 165, 243),rgb(30, 55, 180));
+    height: 80vh;
+    position: relative;
+    border: none;
+}
+.choir_content{
+    margin-top: 100px;
+}
+.just_title{
+    text-align: center;
+    font-family: TITLE;
+    display: inline-flex;
+    font-size: 90px;
+    position: absolute;
+    top: 100px; right: 50%;
+    transform: translate(50%,-50%);  
+}
+.char1{
+    transform: translateX(-12%) translateY(40%) rotate(6deg);
+    display: block;
+}
+
+.char2{
+    transform: translateX(21%) translateY(47%) rotate(4deg);;
+        display: block;
+}
+
+.char3{
+    transform: translateX(50%) translateY(50%) rotate(0);  
+     display: block;
+}
+
+.char4{
+    transform: translateX(187%) translateY(49%) rotate(-5deg); 
+    display: block;
+}
+
+.char5{
+    transform: translateX(126%) translateY(41%) rotate(-14deg);
+    display: block;
+}
+
+
+/* DIVIDER, END CHOIR */
+.custom-shape-divider-bottom-1728969816 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    border: none;
+}
+
+.custom-shape-divider-bottom-1728969816 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 138px;
+    border: none;
+}
+
+.custom-shape-divider-bottom-1728969816 .shape-fill {
+    fill: #e6f776;
+}
+
+.giving{
+    background-image: linear-gradient(to bottom,#e6f776, yellow, rgb(255, 255, 255));
+    height: 50vh;
+    border: none;
+
+}
+
